refactor: consolidate static report consumers